--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="Principal.css">
+    <link rel="stylesheet" href="principal.css">
+    <title>Principal</title>
+
 </head>
 <body>
+    </div>
     
+    <div class="menu">
+        <div class="enlaces">
+            <h1 class="inicio-menu">Inicio</h1>
+            <a href="index2.html" target="_blank">index2</a>
+            <a href="index3.html" target="_blank">index3</a>
+        </div>
+    </div>
+
+    <div class="imagenes">
+        <h1>Juegos exclusivos</h1>
+        <img src="imagenes/0cd047e1af130d0166878f5223799338.jpg" alt="">
+        <img src="imagenes/1c4068993d62d54d4aabe9fbda74a92c.jpg" alt="">
+        <img src="imagenes/7f0afe53776f06bf655c086100938fa4.jpg" alt="">
+        <img src="imagenes/efba6fe1c1584e346c7358c1a4507929.jpg" alt="">
+    </div>
 </body>
 </html>
